--- a/package.json
+++ b/package.json
@@ -14,35 +14,35 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-picker/picker": "^2.4.1",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@walletconnect/react-native-dapp": "^1.7.0",
     "base-64": "^1.0.0",
     "crypto-browserify": "^3.12.0",
-    "expo": "~44.0.0",
-    "expo-asset": "~8.4.4",
-    "expo-constants": "~13.0.0",
-    "expo-font": "~10.0.4",
-    "expo-linking": "~3.0.0",
-    "expo-splash-screen": "~0.14.0",
-    "expo-status-bar": "~1.2.0",
-    "expo-web-browser": "~10.1.0",
+    "expo": "^45.0.0",
+    "expo-asset": "~8.5.0",
+    "expo-constants": "~13.1.1",
+    "expo-font": "~10.1.0",
+    "expo-linking": "~3.1.0",
+    "expo-splash-screen": "~0.15.1",
+    "expo-status-bar": "~1.3.0",
+    "expo-web-browser": "~10.2.1",
     "https-browserify": "^1.0.0",
     "node-libs-react-native": "^1.2.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-get-random-values": "~1.7.0",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-get-random-values": "~1.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-tcp": "^4.0.0",
-    "react-native-web": "0.17.1",
+    "react-native-web": "0.17.7",
     "readable-stream": "^3.6.0",
     "stream-http": "^3.2.0",
     "vm-browserify": "^1.1.2",
@@ -53,9 +53,9 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@types/react-native": "~0.67.6",
     "jest": "^26.6.3",
-    "jest-expo": "~44.0.1",
+    "jest-expo": "^45.0.0",
     "react-test-renderer": "17.0.1",
     "typescript": "~4.3.5"
   },
