--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "strict": true,
+    "esModuleInterop": true
   },
   "exclude": ["node_modules"]
 }
