--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
+    "lint": "eslint .",
+    "validate": "yarn lint && yarn tsc",
     "test": "jest --watchAll"
   },
   "jest": {
@@ -52,10 +54,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
+    "eslint": "^8.34.0",
     "jest": "^26.6.3",
     "jest-expo": "^45.0.0",
+    "prettier": "^2.8.4",
     "react-test-renderer": "17.0.1",
     "typescript": "~4.3.5"
   },
