--- a/package.json
+++ b/package.json
@@ -17,34 +17,34 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-picker/picker": "2.4.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
-    "@walletconnect/react-native-dapp": "^1.7.0",
+    "@walletconnect/react-native-dapp": "^1.8.0",
     "base-64": "^1.0.0",
     "crypto-browserify": "^3.12.0",
-    "expo": "^45.0.0",
-    "expo-asset": "~8.5.0",
-    "expo-constants": "~13.1.1",
-    "expo-font": "~10.1.0",
-    "expo-linking": "~3.1.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-web-browser": "~10.2.1",
+    "expo": "^48.0.0",
+    "expo-asset": "~8.9.1",
+    "expo-constants": "~14.2.1",
+    "expo-font": "~11.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-splash-screen": "~0.18.1",
+    "expo-status-bar": "~1.4.4",
+    "expo-web-browser": "~12.1.1",
     "https-browserify": "^1.0.0",
     "node-libs-react-native": "^1.2.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
     "react-native-get-random-values": "~1.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-tcp": "^4.0.0",
-    "react-native-web": "0.17.7",
+    "react-native-web": "~0.18.11",
     "readable-stream": "^3.6.0",
     "stream-http": "^3.2.0",
     "vm-browserify": "^1.1.2",
@@ -53,16 +53,16 @@
     "web3-utils": "^1.7.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
-    "@types/react": "~17.0.21",
+    "@types/react": "~18.0.27",
     "@types/react-native": "~0.67.6",
     "eslint": "^8.34.0",
-    "jest": "^26.6.3",
-    "jest-expo": "^45.0.0",
+    "jest": "^29.2.1",
+    "jest-expo": "^48.0.0",
     "prettier": "^2.8.4",
     "react-test-renderer": "17.0.1",
-    "typescript": "~4.3.5"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
