--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --tunnel",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "lint": "eslint .",
@@ -60,6 +60,7 @@
     "eslint": "^8.34.0",
     "jest": "^29.2.1",
     "jest-expo": "^48.0.0",
+    "patch-package": "^6.5.1",
     "prettier": "^2.8.4",
     "react-test-renderer": "17.0.1",
     "typescript": "^4.9.4"
